feat: ported full http setup to lambda

--- a/lambdas/presigned-cleanup/Cargo.toml
+++ b/lambdas/presigned-cleanup/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "presigned-cleanup"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 aws-config.workspace = true
@@ -17,3 +17,6 @@ docbox-secrets.workspace = true
 
 thiserror.workspace = true
 chrono.workspace = true
+
+tracing.workspace = true
+dotenvy.workspace = true
